# hello_fetchcontent

./: .gitignore  CMakeLists.txt  README.md
include/hello/: hello.h
src/: hello.cpp
